# autoarc

./: Cargo.toml  build.sh  test.az
src/: main.rs  unzip.rs
